--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Моя тестовая страница</title>
-   <link rel="stylesheet" href="/styles/style.css" type="text/css">
+   <link rel="stylesheet" href="styles/style.css" type="text/css">
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
    <h1>Тестовая страница</h1>
-   <img src="/images/firefox-icon.png" alt="тестовая картинка">
+   <img src="images/firefox-icon.png" alt="тестовая картинка">
    <p>Mozilla, мы являемся мировым сообществом</p>
    
    <ul>
@@ -27,6 +27,6 @@
 
    <button>Выбор пользователя</button>
 
-   <script src="/scripts/main.js"></script>
+   <script src="scripts/main.js"></script>
 </body>
 </html>
